root/css/main.css
/* ... */
div#splash-box.tutorial{
  background-image:url('/img/home-fade.jpg');
}

div#tutorial-left{
  background-image:url('/img/tutorial.png');
  background-repeat:no-repeat;
  background-position: -235px 0;
  width:695px;
  height:225px;
  position:absolute;
  left:20px;
  top:10px;
  z-index:-1;
}

div#tutorial-right{
  background-image:url('/img/tutorial.png');
  background-repeat:no-repeat;
  position:absolute;
  right:30px;
  top:10px;
  background-repeat:no-repeat;
  width:229px;
  height:216px;
  z-index:-1;
}

#skip-tutorial:hover{
  background:url('/img/home-arrow.png') no-repeat 110px 10px;
}

div.star-tutorial{
  height:110px;
  width:170px;
  position:absolute;
  right:52px;
  bottom:16px;
  cursor:pointer;
}

div.star-tutorial:hover, .star-selected{
  background-image:url('/img/home-yellow.png');
}

div#splash-box>p{
  margin:-0.2em 0 1em 0.6em;
  margin-left:1.5em;
  text-align:center;
  width:15em;
}

div#create-prompt {
  font-size:0.5em;
  background:white;
  position:absolute;
  right:2em;
  bottom:1.5em;
  text-align:center;
  padding:1.5em;
  border:1px solid #CDCDCD;
  background:#E9EEF2;
}

.default-login{
  padding:0.5em 0 0 0;
  position:relative;
}

#create-account{
/*   clear:both; */
  clear:left;
  padding:0.4em 0.8em;
  font-size:0.9em;
  color:white;
  margin:0.5em 0.5em 0 0 ;
  float:left;
  width:5em;
  display:block;
  cursor:pointer;
  border:none;
  background: #406F9C;
  background: #406F9C -moz-linear-gradient(90deg, #406F9C, #8CA4BA);
  background: #406F9C -webkit-gradient(linear, 0% 0%, 0% 100%, from(#8CA4BA), to(#406F9C));
  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#8CA4BA,endColorStr=#406F9C);
}

#create-account:hover{
  background: #8CA4BA;
  background: #8CA4BA -moz-linear-gradient(90deg, #406F9C, #A3BCD4);
  background: #8CA4BA -webkit-gradient(linear, 0% 0%, 0% 100%, from(#A3BCD4), to(#406F9C));
  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#A3BCD4,endColorStr=#406F9C);
}


/* Seach bar and results page */
#results {
  max-width:49em;
  margin: 0;
  padding:0;
}

#results ul {
  margin:0 -0.5em;
  padding:0.3em 0 0 0;
  list-style-type: none;
  font-size:10pt;
}

#results ul li{
   padding-top:0.5em;
   font-size:1.1em;
}

#results ul li a{
   text-decoration:underline;
}

#results ul li div.date{
  text-decoration:none;
  float:right;
}

#load-results {
  width:100%;
  background:#EEE;
  text-align:center;
  margin:0.5em 0;
  padding:0.5em 0;
  cursor:pointer;
  color: #0000B8;
}
#load-results:hover{
  background:#CCC;
}

.paper-journal{
  float:left;
  padding-right:0.2em;
  position:relative;
}

.ellipsis, .ellipsis>span {
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
  -ms-text-overflow: ellipsis;
  overflow: hidden;
  height:1.3em;
}

.ellipsis {
  display:block;
}

.ellipsis>span{
  white-space: nowrap;
  position:absolute;
  max-width:100%;
}

.text-min-expand {
  clear:left;
  height:2.4em;
  overflow:hidden;
  width:auto;
  text-overflow: ellipsis;
}

.text-min:hover div.more, div.more:hover, .result:hover div.ev-more-text span, .result:hover .v, div.columns div.ui-icon-close:hover {
  opacity:1;
  filter:alpha(opacity=100);
  -moz-opacity:1;
  color:black;
}

.result:hover .ev-more-text span{
  background-color: #E9EEF2;
}

.evidence {
  cursor:pointer;
}

.ev-more-text {
  text-align:center;
  font-size:0.8em;
  width:4em;
  margin:0 auto;
  padding-right:4em;
}

.ev-more-text span {
  z-index:2;
  position:absolute;
  background-color:white;
  padding:0 2px;
  color:#999;
  text-align:center;
  width:4em;
}

tr.odd .ev-more-text span {
  background-color:#E2E4FF;
}

.ev-more {
  width:100%;
  position:relative;
  height:1em;
}

.ev {
  font-size:0.9em;
}

.ev-more .v {
  position:absolute;
  opacity:0.3;
  filter:alpha(opacity=30);
  -moz-opacity:0.3;
  z-index:1;
}

.ev-more .ui-icon {
  position:relative;
  margin:0 auto 0;
  top:0.7em;
  z-index:3;
}

.ev-more.open .ui-icon {
  top:-6px;
}

.ev-more-line {
  width: 80%;
  left: 10%;
  border-top:1px solid black;
  position:absolute;
  top:0.7em;
}

div.more {
  cursor:pointer;
  position:relative;
  margin:0.5em 10% 0;
  height:5px;
  border-top:1px solid black;
  opacity:0.3;
  filter:alpha(opacity=30);
  -moz-opacity:0.3;
}

div.more.open {
  border-top:none;
  border-bottom:1px solid black;
}

div.more .ui-icon {
  position:relative;
  margin: 0 auto;
  top:-6px;
}

/* Not sure why id instead of class is used initially*/
/* too widespread to change now */
#fade, .fade {
   color: #999999;
   font-size: 0.8em;
}

a#fade:hover, a.fade:hover {
  text-decoration:underline;
}


.result {
  padding:0 0.5em 0.5em;
  position:relative;
}

.result.evidence{
  padding: 0 0 0.2em 0;
}

.result:hover {
  background-color: #E9EEF2;
}

.search-results #searchResultForm #SearchResult {
  width:95%;
}

.search-results {
  overflow:hidden;
  max-height: 72px;
}


/* The search bar form */
#searchResultForm {
  padding:0;
  display: flex;
  float:left;
}

#searchBody {
  border-right:1px dotted gray;
  float:left;
  display:flex;
  display:-webkit-box;  /*flex width for Safari*/
  margin: 0.4em;
  position:relative;
  background:white;
  min-width: 235px;
  max-height: 1.3em;
  justify-content: space-between;
}

#searchResultForm #searchBody {
  margin: 0;
  padding:0.3em;
  border:none;
}

#searchForm {
  float:right;
  position:relative;
  display:flex;
  padding:0;
  height:2em;
  margin:0.5em 1.5em 0 0;
  background:#FFF;
  min-width:275px;
}

#searchForm input.text, #searchResultForm input.text{
  float:none;
  width:8em;
  color: #565656;
  border:none;
  padding: 0 0.3em;
  font-size:1em;
  text-align: left;
  height:1.3em;
  margin:0;
}


#searchForm input.ui-icon, #searchResultForm input.ui-icon{
  float:left;
  margin:0.3em 0.5em 0 0;
  padding:0;
  background-color:transparent;
  cursor:pointer;
  border:none;
}

#searchResultForm input.ui-icon {
  margin:0;
}
/* ... */

